src/main.scss
$font: "Lato", sams-serif;
$red: #c62828;
$grey: #949494;
$white: #ffffff;
html {
  font-size: 100%;
}

body {
  background: url("./the-crown-background.jpg");
  background-size: cover;
  color: $white;
  font-family: $font;
}

#Header {
  padding: 40px;
  display: flex;
  position: fixed;
  background-image: rgba(0, 0, 0, 0.7);
  top: 0;
  left: 0;
  width: 100vw;
  box-sizing: border-box;
  z-index: 1000;
}

#Logo {
  path {
    fill: #d81f26;
  }
  width: 151px;
  height: 2.2rem;
  vertical-align: middle;
  margin-right: 10px;
  transition: margin 0.125s ease;

  &:hover {
    path {
      fill: $white !important;
    }
    margin-top: 3px;
    cursor: pointer;
  }
}

#Navigation {
  display: flex;
  padding: 0 40px;
  height: 2rem;
  align-items: center;
  a {
    color: $white;
    text-decoration: none;
    font-weight: 700;
    padding: 7px 10px;
    transition: background 0.125s ease;
    border-radius: 3px;

    &:hover {
      background: $red;
      cursor: pointer;
    }
  }
}

#Search {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  position: absolute;
  pointer-events: none;

  input {
    font-weight: 400;
    font-size: 1rem;
    color: $white;
    background: transparent;
    border: 0;
    border: 2px solid rgba($grey, 0.3);
    border-radius: 37px;
    padding: 0 0.5rem;
    height: 2rem;
    width: 20%;
    pointer-events: auto; // When can a graphic become a target of a mouse event
    transition: border 0.25s ease, width 0.125s ease 0.125s;

    outline: none;
    appearance: none;

    &:focus {
      border: 2px solid $red;
      width: 30%;
    }
  }
}

#Main {
  width: 100%;
  position: relative;
  background-size: cover;
  background-color: black;
  padding-bottom: 40%;
}

.item {
  box-sizing: border-box;
  display: inline-block;
}

